# facebook-cli

./: .gitignore  AGENTS.md  BROWSER_OPERATION.md  README.md  pyproject.toml
src/facebook_cli/: __init__.py  browser.py  cli.py  conf.py  exceptions.py  profile_locks.py  session.py  worker.py
src/facebook_cli/actions/: __init__.py  auth.py  extract.py  messages.py  posts.py  profile.py
tests/: test_profile_locks.py  test_search.py  test_search_live.py
