[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "facebook-cli"
version = "0.1.0"
description = "CLI for Facebook browser automation workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "darwincr" }]
dependencies = [
    "playwright==1.60.0",
    "tenacity>=8,<10",
    "termcolor",
]

[project.scripts]
facebook-cli = "facebook_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/facebook_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
